--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,23 +1,21 @@
-name: custom_inner_drawer
+name: slidable_drawer
 description: This package was created to implement a Custom Drawer that could be opened with a simple swipe.
 homepage: https://github.com/K1yoshiSho/inner_drawer.git
-version: 1.0.5
+version: 1.0.6
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
+  sdk: '>=3.2.5 <4.0.0'
+  flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-
-  cupertino_icons: ^1.0.2
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 
 flutter:
